@@ -51,6 +51,7 @@
 	// texture RGBA. 
 	GLubyte		opacity_;
 	ccColor3B	color_;
+	ccColor3B	colorUnmodified_;
 	BOOL opacityModifyRGB_;
 }
 
