@@ -25,7 +25,6 @@
 
 @implementation CCAtlasNode
 
-@synthesize opacity=opacity_, color=color_;
 @synthesize textureAtlas = textureAtlas_;
 @synthesize blendFunc = blendFunc_;
 
@@ -44,8 +43,8 @@
 		itemHeight = h;
 
 		opacity_ = 255;
-		color_ = ccWHITE;
-		opacityModifyRGB_ = NO;
+		color_ = colorUnmodified_ = ccWHITE;
+		opacityModifyRGB_ = YES;
 		
 		blendFunc_.src = CC_BLEND_SRC;
 		blendFunc_.dst = CC_BLEND_DST;
@@ -124,24 +123,54 @@
 
 #pragma mark CCAtlasNode - RGBA protocol
 
--(void) setOpacity:(GLubyte)opacity
+- (ccColor3B) color
 {
+	if(opacityModifyRGB_){
+		return colorUnmodified_;
+	}
+	return color_;
+}
+
+-(void) setColor:(ccColor3B)color3
+{
+	color_ = colorUnmodified_ = color3;
+	
+	if( opacityModifyRGB_ ){
+		color_.r = color3.r * opacity_/255;
+		color_.g = color3.g * opacity_/255;
+		color_.b = color3.b * opacity_/255;
+	}	
+}
+
+-(GLubyte) opacity
+{
+	return opacity_;
+}
+
+-(void) setOpacity:(GLubyte) anOpacity
+{
+	opacity_			= anOpacity;
+	
 	// special opacity for premultiplied textures
-	opacity_ = opacity;
 	if( opacityModifyRGB_ )
-		color_.r = color_.g = color_.b = opacity_;	
+		[self setColor: (opacityModifyRGB_ ? colorUnmodified_ : color_ )];	
 }
--(void) updateOpacityModifyRGB
-{
-	opacityModifyRGB_ = [textureAtlas_.texture hasPremultipliedAlpha];
-}
+
 -(void) setOpacityModifyRGB:(BOOL)modify
 {
-	opacityModifyRGB_ = modify;
+	ccColor3B oldColor	= self.color;
+	opacityModifyRGB_	= modify;
+	self.color			= oldColor;
 }
+
 -(BOOL) doesOpacityModifyRGB
 {
 	return opacityModifyRGB_;
+}
+
+-(void) updateOpacityModifyRGB
+{
+	opacityModifyRGB_ = [textureAtlas_.texture hasPremultipliedAlpha];
 }
 
 #pragma mark CCAtlasNode - CocosNodeTexture protocol
@@ -165,6 +194,5 @@
 {
 	return textureAtlas_.texture;
 }
-
 
 @end
